# hello-world-service

./: .dockerignore  .env  .gardenignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  garden.yml  package.json  pull_request_template.md  release.Dockerfile  watch.sh
data/: samples.json
proto/: hello-world.proto
src/: main.rs
src/api/: error.rs  items.rs  mod.rs
src/db/: id.rs  mod.rs
